rapihin landing page

--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -1,51 +1,80 @@
+@import "https://use.fontawesome.com/releases/v5.5.0/css/all.css";
 nav {
-    z-index: 10;
-    position: absolute;
-    width: 100%;
-    min-width: 150vh;
-    height: 80px;
-    margin: 0 auto;
-    background-color: #192E54;
-    vertical-align: middle;
+  width: 100%;
+  height: 80px;
+  margin: 0 auto;
+  background-color: #192E54;
+  vertical-align: middle;
 }
 
 nav img {
-    margin-left: 20px;
+  margin-left: 20px;
 }
 
 nav ul {
-    float: right;
-    margin-right: 20px;
-    display: flex;
-}
-
-nav ul h1 {
-    color: white;
-    margin-right: 80px;
+  float: right;
+  margin-right: 20px;
 }
 
 nav ul li {
-    display: inline-block;
-    line-height: 40px;
-    margin: 0 5px;
+  display: inline-block;
+  line-height: 80px;
+  margin: 0 5px;
 }
 
 nav ul li a {
-    padding: 5px 15px 5px 15px;
-    color: white;
-    font-family: sans-serif;
-    font-weight: bold;
-    text-decoration: none;
-    margin: 0 10px 0 0;
-    background: #F59400;
-    border-radius: 5px;
+  padding: 5px 15px 5px 15px;
+  color: white;
+  font-family: sans-serif;
+  font-weight: bold;
+  text-decoration: none;
+  margin: 18px 10px 0 0;
+  background: #F59400;
+  border-radius: 5px;
+  transition: .5s;
+}
+nav ul li a.active:hover {
+  background: #ffbb00;
+}
+
+
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 main {
     min-height: 100vh;
     background: linear-gradient(to right top, #ffc100, #ff4d00);
     display: flex;
-    align-items: center;
     justify-content: center;
-    flex-direction: column;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    background-size: cover;
+}
+
+.about {
+  width: 100vh;
+  text-align: center;
+  font-family: sans-serif;
+  color: white;
+  margin-top: 20vh;
+}
+
+.about p {
+  margin: 20px;
+  font-size: 20px;
+  letter-spacing: 2px;
+
+
+}
+
+.about h1{
+  font-size: 40px;
 }
