--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -12,6 +12,7 @@
 <body>
     <nav>
         <img class="aksantara" src="../../assets/image/aksantara.png" />
+
         <ul>
             <li><a class="active" href="#" routerLink="/login">Login</a> </li>
             <li><a class="active" href="#" routerLink="/register">Register</a> </li>
@@ -21,7 +22,7 @@
     <main>
 
         <div class="about">
-            <h1>Antharwa Ground Control Station</h1>
+            <h1>ANTHARWA Ground Control Station</h1>
 
             <p>GCS Antharwa adalah GCS yang dikembangkan berbasis web application dengan menerapkan skema autentikasi agar dapat diakses oleh banyak pengguna di berbagai device apapun. Terdapat tiga fungsi utama dari GCS Antharwa yaitu menerima dan menampilkan
                 flight data dari UAV, merencanakan dan mengirimkan misi terbang ke UAV, dan melakukan pengaturan serta penerimaan parameter UAV. GCS yang dibangun akan mengimplementasikan tiga fungsi utama tersebut. Namun agar lebih memudahkan operator
