ngubah header, auth service, login component

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,7 +11,7 @@
   </label>
 <div class="sidebar">
     <ul>
-        <li><a routerLink="/flight-data">Flight Data</a></li>
+        <li><a routerLink="/dashboard"></a></li>
         <li><a routerLink="/mission">Mission</a></li>
         <li><a routerLink="/parameter">Parameter</a></li>
         <li><a routerLink="/home">Home</a></li>
