--- a/src/app/parameter/parameter.component.html
+++ b/src/app/parameter/parameter.component.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
 
-  </head>
+<head>
+
+</head>
 
 
 
 <body>
 
-  <app-header> </app-header>
-  <nav>
+    <app-header> </app-header>
+    <!-- <nav>
     <img class="aksantara" src="../../assets/image/aksantara.png"/>
     <ul>
       <li><h1>Parameter</h1></li>
     </ul>
 
 
-  </nav>
+  </nav> -->
 
-  <main>
+    <main>
 
-    <div class="buttonClass">
-      <button class="clr-btn" ><span>Clear Parameter</span></button>
-      <button class="parameter-btn" ><span>Get Parameter</span></button>
-      <button class="parameter-btn" ><span>Send Parameter</span></button>
-  </div>
+        <div class="buttonClass">
+            <button class="clr-btn"><span>Clear Parameter</span></button>
+            <button class="parameter-btn"><span>Get Parameter</span></button>
+            <button class="parameter-btn"><span>Send Parameter</span></button>
+        </div>
 
-  <!-- <table *ngIf="parameters.children.length > 1">
+        <!-- <table *ngIf="parameters.children.length > 1">
       <tr>
           <th><p>Param Index</p></th>
           <th><p>Param Name</p></th>
@@ -43,7 +44,7 @@
   </table> -->
 
 
-  </main>
+    </main>
 </body>
 
 </html>
