--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,30 +1,57 @@
 @import "https://use.fontawesome.com/releases/v5.5.0/css/all.css";
-
-*{
-  margin: 0;
-  padding: 0;
-  list-style: none;
+* {
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
 
-html{
-  height: 100%;
+html {
+    height: 100%;
 }
 
 nav {
-  position: fixed;
-  width: 100%;
-  min-width: 150vh;
-  height: 80px;
-  margin: 0 auto;
-  background-color: #192E54;
-  vertical-align: middle;
+    width: 100%;
+    height: 80px;
+    margin: 0 auto;
+    background-color: #192E54;
+    vertical-align: middle;
 }
 
 nav img {
-  margin-left: 20px;
+    margin-left: 20px;
 }
 
-.sidebar{
+nav ul {
+    float: right;
+    margin-right: 20px;
+}
+
+nav ul li {
+    display: inline-block;
+    line-height: 80px;
+    margin: 0 5px;
+}
+
+nav ul li a i {
+    /* padding: 5px 15px 5px 15px; */
+    color: white;
+    /* font-family: sans-serif;
+  font-weight: bold;
+  text-decoration: none; */
+    margin: 18px 10px 0 0;
+    /* background: #F59400;
+  border-radius: 5px; */
+    transition: .5s;
+    color: #F59400;
+    font-size: 30px;
+}
+
+nav ul li a i:hover {
+    color: #ffbb00;
+}
+
+
+/* .sidebar{
   z-index: 12;
   position:fixed;
   transform: translateX(-1000px);
@@ -91,4 +118,4 @@ input {
   visibility: hidden;
 
 }
-
+ */
