--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,19 +3,33 @@
 </head>
 
 
+<nav>
+    <img class="aksantara" src="../../assets/image/aksantara.png" />
 
-<input type="checkbox" id="check">
-<label for="check">
-    <i class="fas fa-bars" id="btn"></i>
-    <i class="fas fa-bars" id="cancel"></i>
-  </label>
-<div class="sidebar">
     <ul>
-        <li><a routerLink="/dashboard"></a></li>
-        <li><a routerLink="/mission">Mission</a></li>
-        <li><a routerLink="/parameter">Parameter</a></li>
-        <li><a routerLink="/home">Home</a></li>
-        <li><a (click)="logoutUser()">Logout</a></li>
+        <li>
+            <a id="profile" href=" # "><i class="fas fa-user-alt" ></i></a>
+        </li>
+
+        <!-- <li><a class="active" href="#" routerLink="/login">Login</a> </li> -->
     </ul>
 
-</div>
+
+</nav>
+
+
+<!-- <input type="checkbox " id="check ">
+<label for="check ">
+    <i class="fas fa-bars " id="btn "></i>
+    <i class="fas fa-bars " id="cancel "></i>
+  </label>
+<div class="sidebar ">
+    <ul>
+        <li><a routerLink="/dashboard "></a></li>
+        <li><a routerLink="/mission ">Mission</a></li>
+        <li><a routerLink="/parameter ">Parameter</a></li>
+        <li><a routerLink="/home ">Home</a></li>
+        <li><a (click)="logoutUser() ">Logout</a></li>
+    </ul>
+
+</div> -->
