integrasi backend dan frontend

--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -24,7 +24,7 @@
                 <h1>Register</h1>
                 <div class="textbox">
                     <label class="form-label">Full Name</label>
-                    <input [(ngModel)]="registerUserData.fullname" type="text" placeholder="Enter Full Name" name="fullname" value="">
+                    <input [(ngModel)]="registerUserData.nama" type="text" placeholder="Enter Full Name" name="nama" value="">
                 </div>
                 <!-- <div class="textbox">
           <label class="form-label">Phone Number</label>
