buat serial service

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -27,7 +27,9 @@
             <p>GCS Antharwa adalah GCS yang dikembangkan berbasis web application dengan menerapkan skema autentikasi agar dapat diakses oleh banyak pengguna di berbagai device apapun. Terdapat tiga fungsi utama dari GCS Antharwa yaitu menerima dan menampilkan
                 flight data dari UAV, merencanakan dan mengirimkan misi terbang ke UAV, dan melakukan pengaturan serta penerimaan parameter UAV. GCS yang dibangun akan mengimplementasikan tiga fungsi utama tersebut. Namun agar lebih memudahkan operator
                 UAV,untuk memantau flight data dapat dilakukan bukan hanya dengan cara klasik seperti mengetik dan menekan tombol namun juga dapat dilakukan melalui suara dengan mengintegrasikan GCS dengan teknologi voice recognition. Fitur lain dari
-                GCS Antharwa adalah controlling dan monitoring multi wahana.</p>
+                GCS Antharwa adalah controlling dan monitoring multi wahana.
+              </p>
+
 
         </div>
 
