--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -23,6 +23,18 @@
 
     </div>
 
+    <div>
+      <label for="channel"></label>
+      <select name="channel" id="channel" [(ngModel)]="connectUsing">
+        <option value="serial">Serial Port</option>
+        <option value="udp">UDP</option>
+      </select>
+    </div>
+
+    <button (click)="connect()">
+      Connect
+    </button>
+
     <div class="user">
         <ul>
             <li>
