--- a/src/app/flight-data/flight-data.component.css
+++ b/src/app/flight-data/flight-data.component.css
@@ -155,6 +155,14 @@ ul li:hover a{
   color: #f56200;
   text-align: center;
   margin: 20px 20px;
+  cursor: pointer;
+  transition: .5s;
+}
+.fas {
+  transition: .5s;
+}
+.fas:hover {
+  color: #ffc100;
 }
 
 i {
