implementasiin voice activation service

--- a/src/app/flight-data/flight-data.component.html
+++ b/src/app/flight-data/flight-data.component.html
@@ -50,8 +50,8 @@
 
                 </div>
                 <div class="voice-activation">
-                    <i class="fas fa-microphone" id="active"></i>
-                    <i class="fas fa-microphone-slash" id="mute"></i>
+                    <i (click)="startVoice()" class="fas fa-microphone" id="active"></i>
+                    <i (click)="stopVoice()" class="fas fa-microphone-slash" id="mute"></i>
                 </div>
 
             </section>
