nambah waypoint, kurang tabel misi

--- a/src/app/flight-data/flight-data.component.html
+++ b/src/app/flight-data/flight-data.component.html
@@ -58,7 +58,7 @@
 
 
             <section class="map">
-                <app-map></app-map>
+                <app-map [isMap]="isMap"></app-map>
 
             </section>
 
