--- a/src/app/mission/mission.component.html
+++ b/src/app/mission/mission.component.html
@@ -31,8 +31,8 @@
 
                 <div class="home">
                     <p>Home Location</p>
-                    <p class="number">Lat : <span style="font-size: 20px;" id="latitude">0</span></p>
-                    <p class="number">Lon : <span style="font-size: 20px;" id="longitude">0</span></p>
+                    <p class="number">Lat : {{ this.Lat }} <span style="font-size: 20px;" id="latitude">0</span></p>
+                    <p class="number">Lon : {{ this.Lon }} <span style="font-size: 20px;" id="longitude">0</span></p>
 
                 </div>
 
