--- a/src/app/mission/mission.component.html
+++ b/src/app/mission/mission.component.html
@@ -31,8 +31,8 @@
 
                 <div class="home">
                     <p>Home Location</p>
-                    <p class="number">Lat : {{ this.Lat }} <span style="font-size: 20px;" id="latitude">0</span></p>
-                    <p class="number">Lon : {{ this.Lon }} <span style="font-size: 20px;" id="longitude">0</span></p>
+                    <p class="number"><span style="font-size: 20px;" id="latitude">Lat  : {{ this.Lat }}</span></p>
+                    <p class="number"><span style="font-size: 20px;" id="longitude">Lon : {{ this.Lon }}</span></p>
 
                 </div>
 
@@ -40,7 +40,7 @@
             </div>
 
             <div class="map">
-                <app-map></app-map>
+                <app-map [isMap]="isMap"></app-map>
             </div>
 
         </div>
