buat waypoint editor

--- a/src/app/mission/mission.component.html
+++ b/src/app/mission/mission.component.html
@@ -43,7 +43,12 @@
                 <app-map [isMap]="isMap"></app-map>
             </div>
 
+
         </div>
+
+          <app-waypoint-editor></app-waypoint-editor>
+
+
 
     </main>
 </body>
