aplikasi websocket frontend backend

--- a/src/app/flight-data/flight-data.component.html
+++ b/src/app/flight-data/flight-data.component.html
@@ -42,9 +42,9 @@
                 <div class="parameter">
                     <p style="margin-bottom: 15px;">Values</p>
                     <p>Alt (Rel) (m)</p>
-                    <p id="alt" style="margin-bottom: 15px;" class="number">0.0</p>
+                    <p id="alt" style="margin-bottom: 15px;" class="number">{{ alt }}</p>
                     <p>Ground Speed (m/s)</p>
-                    <p id="gdspeed" style="margin-bottom: 15px;" class="number">0.0</p>
+                    <p id="gdspeed" style="margin-bottom: 15px;" class="number">{{ gs }}</p>
                     <p>Flight Time</p>
                     <p class="number"><span id="hour">00</span>:<span id="minute">00</span>:<span id="second">00</span></p>
 
