--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -65,6 +65,20 @@ body {
   font-family: sans-serif;
   color: white;
   margin-top: 20vh;
+  animation: landing 5s linear 1s normal;
+  animation-timing-function: ease-in-out;
+}
+
+@keyframes landing {
+  0%{
+    opacity: 0;
+    margin-top: 30vh;
+  }
+
+  50%{
+    opacity: 1;
+    margin-top: 20vh;
+  }
 }
 
 .about p {
