nambah link header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
 
 
 <nav>
-    <img class="aksantara" src="../../assets/image/aksantara.png" />
+    <img routerLink="/landing" class="aksantara" src="../../assets/image/aksantara.png" />
     <div class="top-icon">
         <ul>
             <li>
