--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav>
-        <img class="aksantara" src="../../assets/image/aksantara.png" />
+        <img routerLink="/landing" class="aksantara" src="../../assets/image/aksantara.png" />
 
         <ul>
             <li><a class="active" href="#" routerLink="/login">Login</a> </li>
