--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -10,7 +10,7 @@
 <body>
 
     <nav>
-        <img class="aksantara" src="../../assets/image/aksantara.png" />
+        <img routerLink="/landing" class="aksantara" src="../../assets/image/aksantara.png" />
         <ul>
             <li><a class="active" href="#" routerLink="/login">Login</a> </li>
         </ul>
