--- a/src/app/parameter/parameter.component.html
+++ b/src/app/parameter/parameter.component.html
@@ -27,7 +27,7 @@
             <button class="parameter-btn"><span>Send Parameter</span></button>
         </div>
 
-        <!-- <table *ngIf="parameters.children.length > 1">
+        <table>
       <tr>
           <th><p>Param Index</p></th>
           <th><p>Param Name</p></th>
@@ -41,7 +41,7 @@
           <td><input type="number" [(ngModel)]="parameter.param_value" placeholder="{{ parameter.param_value }}"/></td>
           <td><p>{{ parameter.param_type }}</p></td>
       </tr>
-  </table> -->
+  </table>
 
 
     </main>
