rapihin header & voice activation

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -26,7 +26,7 @@
 
 
     <div class="user">
-      <div class="connect-list">
+      <!-- <div class="connect-list">
         <label for="channel"></label>
         <select name="channel" id="channel" [(ngModel)]="connectUsing">
           <option value="serial">Serial Port</option>
@@ -35,7 +35,7 @@
         <button class="connect-btn" (click)="connect()">
           Connect
         </button>
-      </div>
+      </div> -->
 
 
         <ul>
