--- a/src/app/flight-data/flight-data.component.html
+++ b/src/app/flight-data/flight-data.component.html
@@ -53,6 +53,7 @@
                     <i (click)="startVoice()" class="fas fa-microphone" id="active"></i>
                     <i (click)="stopVoice()" class="fas fa-microphone-slash" id="mute"></i>
                 </div>
+                <input (keyup.enter)="onKey($event)">
 
             </section>
 
