--- a/src/app/flight-data/flight-data.component.html
+++ b/src/app/flight-data/flight-data.component.html
@@ -44,7 +44,7 @@
                     <p>Alt (Rel) (m)</p>
                     <p id="alt" style="margin-bottom: 15px;" class="number">{{ alt }}</p>
                     <p>Ground Speed (m/s)</p>
-                    <p id="gdspeed" style="margin-bottom: 15px;" class="number">{{ gs }}</p>
+                    <p id="gdspeed" style="margin-bottom: 15px;" class="number">{{ groundspeed }}</p>
                     <p>Flight Time</p>
                     <p class="number"><span id="hour">00</span>:<span id="minute">00</span>:<span id="second">00</span></p>
 
