--- a/src/app/mission/mission.component.html
+++ b/src/app/mission/mission.component.html
@@ -35,6 +35,8 @@
                     <p class="number"><span style="font-size: 20px;" id="longitude">Lon : {{ this.Lon }}</span></p>
 
                 </div>
+                <h3>Input Room Code</h3>
+                <input (keyup.enter)="onKey($event)">
 
 
             </div>
