--- a/src/app/mission/mission.component.html
+++ b/src/app/mission/mission.component.html
@@ -24,8 +24,8 @@
             <div class="plan">
 
                 <div class="buttonClass">
-                    <button class="read-btn"><span>Read</span></button>
-                    <button class="write-btn"><span>Write</span></button>
+                    <button class="read-btn" (click)="readMission()"><span>Read</span></button>
+                    <button class="write-btn" (click)= "sendMission()" ><span>Write</span></button>
                     <button class="home-btn"><span>Home</span></button>
                 </div>
 
@@ -35,8 +35,14 @@
                     <p class="number"><span style="font-size: 20px;" id="longitude">Lon : {{ this.Lon }}</span></p>
 
                 </div>
-                <h3>Input Room Code</h3>
+                <h3>Enter Room Code</h3>
                 <input (keyup.enter)="onKey($event)">
+                <h3>Enter your altitude</h3>
+                <input (keyup.enter)="onKeyalt($event)">
+                <div class="instruction">
+                  <p>to input your room or altitude please press enter on your keyboad, So our system can receive it. </p>
+                </div>
+
 
 
             </div>
