--- a/src/app/mission/mission.component.html
+++ b/src/app/mission/mission.component.html
@@ -40,7 +40,7 @@
                 <h3>Enter your altitude</h3>
                 <input (keyup.enter)="onKeyalt($event)">
                 <div class="instruction">
-                  <p>to input your room or altitude please press enter on your keyboad, So our system can receive it. </p>
+                  <p>to input your room or altitude please press enter on your keyboard, So our system can receive it. </p>
                 </div>
 
 
