nyelesain mission dan param

--- a/src/app/flight-data/flight-data.component.html
+++ b/src/app/flight-data/flight-data.component.html
@@ -62,6 +62,7 @@
                 </ng-template>
                 <h3>Input Room Code</h3>
                 <input (keyup.enter)="onKey($event)">
+                <button (click)="leaveroom()">Leave Room</button>
                 <div class="instruction">
                   <p>to input your room please press enter on your keyboard, So our system can receive it. </p>
                 </div>
