--- a/src/app/mission/mission.component.html
+++ b/src/app/mission/mission.component.html
@@ -37,6 +37,7 @@
                 </div>
                 <h3>Enter Room Code</h3>
                 <input (keyup.enter)="onKey($event)">
+                <div class="leave-btn" (click)="leaveroom()">Leave Room</div>
                 <h3>Enter your altitude</h3>
                 <input (keyup.enter)="onKeyalt($event)">
                 <div class="instruction">
