--- a/src/app/parameter/parameter.component.css
+++ b/src/app/parameter/parameter.component.css
@@ -97,6 +97,10 @@ button.clr-btn:hover{
 .room-input {
   margin-top: 20px;
   color:#f2f2f2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 
 }
 
@@ -113,6 +117,21 @@ button.clr-btn:hover{
 
 .instruction p {
   font-size: 10px;
+}
+
+.leave-btn{
+  width: 150px;
+  background-color: #192E54;
+  border: none;
+  color: white;
+  padding: 5px;
+  font-size: 18px;
+  font-weight: bold;
+  cursor: pointer;
+  /* margin: 12px 0; */
+  margin-top:10px;
+  border-radius: 2rem;
+  transition: .5s;
 }
 
 
